--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           <div class="update-bar"></div>
         </div>
         <button slot="ar-button" id="ar-button">View in your space</button>
-        <div id="ar-prompt">
+        <!-- <div id="ar-prompt">
           <img src="https://modelviewer.dev/shared-assets/icons/hand.png" />
-        </div>
+        </div> -->
       </model-viewer>
     </div>
 
