[FEAT] add leaflet map

--- a/index.html
+++ b/index.html
@@ -2,36 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>BIM-AR Viewer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Model Viewer</title>
-    <!-- Import the component -->
+    <link rel="stylesheet" href="/src/main.css" />
+    <script type="module" src="/src/main.js"></script>
     <script
       type="module"
       src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""
+    />
   </head>
   <body>
-    <div id="app">
-      <model-viewer
-        src="model.glb"
-        ar
-        ar-modes="webxr scene-viewer quick-look"
-        camera-controls
-        tone-mapping="neutral"
-        poster="loading.webp"
-        shadow-intensity="1"
-      >
-        <div class="progress-bar hide" slot="progress-bar">
-          <div class="update-bar"></div>
-        </div>
-        <button slot="ar-button" id="ar-button">View in your space</button>
-        <div id="ar-prompt">
-          <img src="https://modelviewer.dev/shared-assets/icons/hand.png" />
-        </div>
-      </model-viewer>
-    </div>
-
-    <script type="module" src="/src/main.js"></script>
+    <div id="app"></div>
   </body>
 </html>
